fix github workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Download dependencies
       run: go mod download
     
+    - name: Build project
+      run: go build -o bin/batchMedia
+    
     - name: Run tests
       run: |
         cd test
