fix github workflow/win

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,15 +57,15 @@ jobs:
           - os: ubuntu-latest
             goos: linux
             goarch: arm64
-          - os: ubuntu-latest
-            goos: windows
-            goarch: amd64
           - os: macos-latest
             goos: darwin
             goarch: amd64
           - os: macos-latest
             goos: darwin
             goarch: arm64
+          - os: windows-latest
+            goos: windows
+            goarch: amd64
     runs-on: ${{ matrix.os }}
     
     steps:
@@ -87,6 +87,12 @@ jobs:
       run: |
         brew install imagemagick ffmpeg libheif libde265 x265
     
+    - name: Install dependencies (Windows)
+      if: matrix.os == 'windows-latest'
+      run: |
+        choco install imagemagick ffmpeg -y
+        # Note: HEIF support may be limited on Windows
+    
     - name: Cache Go modules
       uses: actions/cache@v3
       with:
@@ -102,6 +108,7 @@ jobs:
       env:
         GOOS: ${{ matrix.goos }}
         GOARCH: ${{ matrix.goarch }}
+        CGO_ENABLED: 1
       run: |
         mkdir -p dist
         if [ "$GOOS" = "windows" ]; then
